Fixed footer overlap

--- a/Wireframe/style.css
+++ b/Wireframe/style.css
@@ -22,6 +22,7 @@ main {
   max-width: 800px;
   /* border: solid; */
   margin: auto;
+  padding-bottom: 100px;
 }
 
 .article {
